force-app/main/default/objects/SSP_Institution__c/SSP_Institution__c.object-meta.xml
<CustomObject>
    <description>Stores details about School, Organisation, Federal Reserve</description>
    <label>SSP Institution</label>
    <nameField>
        
        <displayFormat>IT-{0000000000}</displayFormat>
        
        <label>SSP Institution Name</label>
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>SSP Institutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>