force-app/main/default/objects/SSP_Institution__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Used to store City details</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>