force-app/main/default/objects/SSP_Institution__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Used to store country details</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPCountry</valueSetName>
        
        </valueSet>
</CustomField>