force-app/main/default/objects/SSP_Institution__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>Used to store county details</description>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPCounty</valueSetName>
        
        </valueSet>
</CustomField>