force-app/main/default/objects/SSP_Institution__c/fields/DCDataId__c.field-meta.xml
<CustomField>
    <fullName>DCDataId__c</fullName>
    <description>This field is used to store School Id or Organization Id</description>
    <label>DCDataId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>