force-app/main/default/objects/SSP_Institution__c/fields/DCUniqueDataId__c.field-meta.xml
<CustomField>
    <fullName>DCUniqueDataId__c</fullName>
    <description>Field to capture Unique DCId associated with Record type to identify unique Record</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>DCUniqueDataId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>