force-app/main/default/objects/SSP_Institution__c/fields/FedReserveSequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>FedReserveSequenceNumber__c</fullName>
    <description>This is used to store federal reserve sequence number</description>
    <label>FedReserveSequenceNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>