force-app/main/default/objects/SSP_Institution__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is used to determine if federal reserve bank is active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>