force-app/main/default/objects/SSP_Institution__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>This field is used to store School/Organization/Bank name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>