force-app/main/default/objects/SSP_Institution__c/fields/RoutingNumber__c.field-meta.xml
<CustomField>
    <fullName>RoutingNumber__c</fullName>
    <description>This is used to store Routing Number of Federal Reserve</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>RoutingNumber</label>
    <length>9</length>
    <type>Text</type>
</CustomField>