force-app/main/default/objects/SSP_Institution__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This is used to store Organization type</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Type</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>