force-app/main/default/objects/SSP_Institution__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <description>Used to store Zipcode details</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>