force-app/main/default/objects/SSP_Institution__c/recordTypes/Federal_Reserve.recordType-meta.xml
<RecordType>
    <fullName>Federal_Reserve</fullName>
    <active>true</active>
    <description>Record Type for KHIPP Preferred payment method screen to verify Routing number</description>
    <label>Federal Reserve</label>
</RecordType>