force-app/main/default/objects/SSP_Institution__c/recordTypes/Organization.recordType-meta.xml
<RecordType>
    <fullName>Organization</fullName>
    <active>true</active>
    <label>Organization</label>
</RecordType>