force-app/main/default/objects/SSP_Institution__c/recordTypes/School.recordType-meta.xml
<RecordType>
    <fullName>School</fullName>
    <active>true</active>
    <description>This Record type is used to store school records in database as a part of Day 0 data activity</description>
    <label>School</label>
</RecordType>