force-app/main/default/objects/SSP_Institution__c/listViews/Organization.listView-meta.xml
<ListView>
    <fullName>Organization</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>RECORDTYPE</field>
        
            <operation>equals</operation>
        
            <value>SSP_Institution__c.Organization</value>
        
        </filters>
    <label>Organization</label>
</ListView>