force-app/main/default/objects/SSP_Institution__c/listViews/School.listView-meta.xml
<ListView>
    <fullName>School</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>RECORDTYPE</field>
        
            <operation>equals</operation>
        
            <value>SSP_Institution__c.School</value>
        
        </filters>
    <label>School</label>
</ListView>